fixed JDK compatibility issue